Fix rounded search bar appearance on iOS

--- a/src/scss/components/_sortable.scss
+++ b/src/scss/components/_sortable.scss
@@ -50,6 +50,7 @@ th[data-sort].sort {
   input {
     border: none;
     border-bottom: 1.5px solid black;
+    -webkit-appearance: none;
 
     &:focus {
       outline: 2px dotted vars.$color-focus;
